# algorithmic-options-trading

./: .gitignore  helper.py  main.py  pyproject.toml  setting.py  singleton.py
context/: context_controller.py
info/: info_controller.py  info_model.py  info_service.py
kite/: kite_controller.py  kite_info_service.py  kite_instance_service.py  kite_login_service.py  kite_model.py  kite_quote_service.py
login/: login_controller.py  login_model.py  login_service.py
stock/: stock_controller.py
tab/: tab_controller.py  tab_model.py  tab_service.py
test/: prototype2.py  test_kite.py
ticker/: option_ticker_service.py  stock_ticker_service.py  ticker_controller.py  ticker_model.py  ticker_service.py  token_ticker_service.py
ui/: common.py  form.py  login.py  navbar.py  tabs.py
